<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_example">Example action</string>
    <string name="action_new_message">New Message</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Messenger</string>
    <string name="contacts">Contacts</string>
    <string name="facebook">Facebook</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="manage_groups">Create Group</string>
    <string name="messages">Messages</string>
    <string name="messenger">Messenger</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="test_message">This is a test message, just used to see what a message might look like within a message view. Just adding a little more text to make the message bigger, there are some problems with the overlay. This might need a custom view.</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_facebook">Facebook</string>
    <string name="title_friends">Friends</string>
    <string name="title_groups">Groups</string>
    <string name="title_groups_manage">Create Group</string>
    <string name="title_messages">Messages</string>
    <string name="title_settings">Settings</string>
    <string name="ping_location">Ping</string>
	<string name="welcome_text">PingPal Messenger is a privacy protected group chat app with a positioning twist. Connect with your Facebook friends and chat one-on-one or in groups.</string>
	<string name="loggedin_text">Swipe from left edge of the screen for the menu.</string>
	<string name="notification">Message from</string>
	<string name="group_notification">Group message from</string>
	<string name="allow">Allow</string>
	<string name="not_allow">Don\'t Allow</string>
	<string name="ask">Ask</string>
	<string name="ping_label">Ping Access</string>
	<string name="notif_sound">Notification Sound</string>
	<string name="satellite">Satellite</string>
	<string name="normal">Normal</string>
	<string name="terrain">Terrain</string>
	<string name="hybrid">Hybrid</string>
	<string name="never_post">(We will never post anything)</string>
	<string name="add_members">Add Members:</string>
	<string name="group_name">Group Name:</string>
	<string name="create">Create</string>
	<string name="group_members">Group Members:</string>
	<string name="group_friends">Your friends:</string>
	<string name="send">Send</string>
	<string name="hello">HELLO</string>
	<string name="got_message">You got a message!</string> 
	<string name="location_request">Location Request</string>
	<string name="wants_location">want\'s to know your location.</string>
	<string name="create_success">Successfully created group</string>
	<string name="ping_sent">Ping sent, waiting for response</string>
	<string name="sent_icon">Sent an icon</string>
	<string name="sent_location">Sent a location</string>
	<string name="fb_login">Log in</string>
	<string name="fb_logout">Log out</string>
	<string name="quit_group">Quit Group</string>
	<string name="members">Members</string>
	<string name="the_member">the member</string>
	<string name="ok">OK</string>
	<string name="add">Add</string>
	<string name="remove">Remove</string>
	<string name="tips">Tip</string>
	<string name="conv_tip">You can press \"Ping\" in the options menu to get (name)\'s position. \r\n\r\nCheck the options menu for more options in e.g. conversations, groups and maps.</string>
	<string name="groupinfo_tip">You can remove members by checking the red checkbox next to them. You can also add friends to the group, by checking the green checkboxes. \r\n\r\nPress the button at the bottom to apply changes.</string>
	<string name="apply">Apply changes</string>
	<string name="clear_all">Clear all messages</string>
	<string name="cleared_all">All messages cleared!</string>
	<string name="reset_tips">Reset tooltips</string>
	<string name="reset_done">Reset done!</string>
</resources>
