<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.pingpal.fragments.SettingsFragment"
    android:background="@color/Black" >
        
        <TextView
            android:id="@+id/ping_access_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ping_label" 
            android:textColor="@color/White"
            android:textSize="20sp"/>
        
        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/ping_access_label"/>
        
        <TextView
            android:id="@+id/notif_sound_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/list_view"
            android:text="@string/notif_sound" 
            android:textColor="@color/White"
            android:textSize="20sp"/>
        
        <ToggleButton 
            android:id="@+id/toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/notif_sound_label"
            android:layout_marginLeft="10dp"
            android:layout_alignBaseline="@+id/notif_sound_label"
            android:checked="true"/>
        
        <Button 
            android:id="@+id/delete_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notif_sound_label"
            android:layout_marginTop="30dp"
            android:text="@string/clear_all"      
            />
        
        <Button 
            android:id="@+id/reset_tooltips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/delete_messages"
            android:layout_marginTop="10dp"
            android:text="@string/reset_tips"      
            />

</RelativeLayout>