<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/White"
    tools:context="io.pingpal.fragments.CreateGroupsFragment" >

    <TextView
        android:id="@+id/create_group_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/manage_groups"
        android:textColor="@color/PingPal_Blue"
        android:textSize="28sp" />

    <ListView
        android:id="@+id/group_friends_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/create_group_button"
        android:layout_below="@+id/groups_add_member"
        android:background="@android:color/white"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

    <EditText
        android:id="@+id/group_editText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/groups_name"
        android:layout_toRightOf="@+id/groups_name"
        android:ems="10" 
        android:imeOptions="actionDone"
        android:singleLine="true">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/groups_add_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/group_editText_name"
        android:layout_marginTop="20dp"
        android:text="@string/add_members"
        android:textColor="@color/PingPal_Blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/groups_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/create_group_label"
        android:layout_marginTop="15dp"
        android:text="@string/group_name"
        android:textColor="@color/PingPal_Blue"
        android:textSize="20sp" />

    <Button
        android:id="@+id/create_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/create"
        android:textSize="20sp" />

</RelativeLayout>