<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context="io.pingpal.fragments.GroupsInfoFragment" >

    <TextView 
        android:id="@+id/group_members_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"   
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/group_members"
        android:textColor="@color/PingPal_Black"
        android:textSize="30sp"/>
    
    <ListView
        android:id="@+id/group_members_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/group_members_label"
        android:layout_above="@+id/group_friends_label"/>
    
    <TextView 
        android:id="@+id/group_friends_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"   
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:text="@string/group_friends"
        android:textColor="@color/PingPal_Black"
        android:textSize="30sp"/>
        
   	<ListView
        android:id="@+id/group_addfriends_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/group_friends_label"
        android:layout_above="@+id/group_removemember_btn"/>
   	
    <Button 
        android:id="@+id/group_removemember_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/apply"/>
</RelativeLayout>